# novelflow

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NovelFlow_Agent开发执行文档.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260613_0001_initial.py  20260711_0001_add_review_runs.py  20260711_0002_add_approval_gate_fields.py  20260711_0003_add_memory_extraction_runs.py  20260711_0004_route_model_profiles.py  20260711_0005_add_working_drafts.py  20260711_0006_rename_scene_story_time.py  20260711_0007_add_scene_context_links.py  20260711_0008_add_chunk_evidence_positions.py  20260711_0009_add_historical_replacement.py  20260711_0010_add_active_workflow_lock.py  (+12 more)
backend/app/: __init__.py  main.py
backend/novelflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: dev_backend.ps1  seed.py  smoke.py  verify_migrations.py  verify_release_version.py
backend/tests/: conftest.py  test_approval_gate.py  test_canon_commits.py  test_canon_migration.py  test_changeset_api.py  test_changeset_engine.py  test_changeset_merge.py  test_context_boundaries.py  test_database_backup.py  test_health.py  test_long_text_processing.py  test_memory_extraction_gate.py  test_memory_handlers.py  test_model_profile_routing.py  test_mvp_flow.py  test_regressions.py  test_review_runs.py  test_scene_documents.py  test_scene_ordering.py  test_version_summary.py  test_workflow_migration.py  test_workflow_runtime.py  test_workflow_worker.py  test_working_draft.py  test_writing_controls.py
(+177 files in other folders)
