[project]
name = "novelflow-backend"
version = "0.1.0"
description = "NovelFlow FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "fastapi>=0.110.0",
  "greenlet>=3.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = true
no_implicit_optional = true
